--- a/indexes/nsc993/83.md
+++ b/indexes/nsc993/83.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国人口14亿？实际可能只有10亿](../../pages/nsc993/n13776256.md) 
+#### [北京变相强制接种新冠疫苗，网络炸锅](../../pages/nsc993/n13776238.md) 
 #### [说什么“社会调剂”，明摆着就是变相拐卖人口](../../pages/nsc993/n13774755.md) 
 #### [【网海拾贝】习近平成密接，中南海要不要封锁？](../../pages/nsc993/n13774711.md) 
 #### [王语馨：“我就是为您好” 慈悲善行感化男士退队  ](../../pages/nsc993/n13773846.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】我们赶上了一个见证奇迹的时代](../../pages/nsc993/n13757535.md) 
 #### [警察将兼任学校副校长，网友：“全面进入警察社会”](../../pages/nsc993/n13756603.md) 
 #### [全美学自联2022年自由精神奖给齐志勇先生的颁奖词](../../pages/nsc993/n13757085.md) 
-#### [祝君安：天仙子·最后审判日益近](../../pages/nsc993/n13757082.md) 
-#### [韩笑：“共产党太腐败了” 上海退伍老兵声言退党](../../pages/nsc993/n13756509.md) 
 
 ---
 #### 第 [ [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) ] 页
