--- a/indexes/nsc1025/200.md
+++ b/indexes/nsc1025/200.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：楼阳生掩耳盗铃 为北京如此分忧](../../pages/nsc1025/n13777752.md) 
+#### [颜丹：中共国“小粉红”已将中国人污名化](../../pages/nsc1025/n13777738.md) 
+#### [王友群：孙力军被审判 政治罪盖子待揭](../../pages/nsc1025/n13777444.md) 
 #### [李正宽：为何同情安倍者令中共恼怒？](../../pages/nsc1025/n13777502.md) 
 #### [沈舟：美军最高将领一语戳破中共战力](../../pages/nsc1025/n13777387.md) 
 #### [田云：乌克兰永久取缔共产党 中共又遭一击](../../pages/nsc1025/n13777463.md) 
@@ -27,9 +30,6 @@
 #### [陈思敏：河南金融大鳄吕奕出逃 赵乐际被打脸](../../pages/nsc1025/n13775311.md) 
 #### [田云：美驻华大使贴文被删 敏感内容触动中共](../../pages/nsc1025/n13775276.md) 
 #### [宇清：从当前社会乱象反思中共对法轮功的镇压](../../pages/nsc1025/n13774707.md) 
-#### [岳山：王小洪为何秘密随习近平访港？](../../pages/nsc1025/n13774491.md) 
-#### [【名家专栏】大批美国企业迁入红色州](../../pages/nsc1025/n13774891.md) 
-#### [袁斌：为何倪匡三十多年前就预言了香港的今天？](../../pages/nsc1025/n13774685.md) 
 
 ---
-#### 第 [ [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) ] 页
+#### 第 [ [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) ] 页
