--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】所谓的觉醒资本主义是左翼谎言](../../pages/nsc1028/n13777457.md) 
+#### [中共罪行录之八十一：因“破坏交通”获罪的倪匡](../../pages/nsc1028/n13777594.md) 
 #### [【名家专栏】中国的先哲们会鄙视中共所为](../../pages/nsc1028/n13772913.md) 
 #### [中共罪行录之八十一：“二流堂”冤案](../../pages/nsc1028/n13772788.md) 
 #### [王友群：涉案103亿元的金融巨贪落马之反思](../../pages/nsc1028/n13772297.md) 
@@ -28,8 +30,6 @@
 #### [惠虎宇：俄乌恩怨 千年探源](../../pages/nsc1028/n13727306.md) 
 #### [林辉：鲁迅签名卖国条约 谩骂杨荫榆是何因](../../pages/nsc1028/n13728824.md) 
 #### [王友群：江泽民中意的接班人陈良宇倒台之回顾](../../pages/nsc1028/n13727137.md) 
-#### [中共罪行录之七十六：“现行反革命”张志新](../../pages/nsc1028/n13726926.md) 
-#### [林辉：鲁迅自言弃医从文原因有假](../../pages/nsc1028/n13727240.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
