--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [吴吕南：乱我心者 今日之日多烦忧](../../pages/nsc1035/n13777510.md) 
 #### [楚一丁：马斯克，一个传奇冒险的梦幻](../../pages/nsc1035/n13777160.md) 
 #### [九霄：《一张传单》感动背后的创作亮点](../../pages/nsc1035/n13773830.md) 
 #### [吴玉：获奖电影《一张传单》，意外捡到宝的惊喜](../../pages/nsc1035/n13772014.md) 
@@ -29,7 +30,6 @@
 #### [李宥萱：当短视频崛起，你，上瘾了吗？](../../pages/nsc1035/n13678127.md) 
 #### [长风拂泪：观电影《抓捕2》有感](../../pages/nsc1035/n13674277.md) 
 #### [清竹：政法系统的朋友，您明白了吗？](../../pages/nsc1035/n13666721.md) 
-#### [吴玉：《抓捕2》影评——为守住良知的警察点赞](../../pages/nsc1035/n13664510.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
