--- a/indexes/nsc993/83.md
+++ b/indexes/nsc993/83.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [浩然：一位瑞典政治家对中共的剖析](../../pages/nsc993/n13778120.md) 
+#### [东方乐：七月的思考：共产主义玩啥哪？](../../pages/nsc993/n13778229.md) 
+#### [沈旭晖：悼念香港人的国际关系启蒙老师、《追龙》预言家倪匡](../../pages/nsc993/n13778215.md) 
 #### [【网海拾贝】二十大后，将迎来“常态化清零时代”？](../../pages/nsc993/n13777599.md) 
 #### [【网海拾贝】中国人口14亿？实际可能只有10亿](../../pages/nsc993/n13776256.md) 
 #### [北京变相强制接种新冠疫苗，网络炸锅](../../pages/nsc993/n13776238.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】中共是最大黑社会](../../pages/nsc993/n13760791.md) 
 #### [【网海拾贝】谁是唐山打人案惯犯累犯背后的保护伞？](../../pages/nsc993/n13759258.md) 
 #### [张肯之：浅谈八九六四与李佳琦事件](../../pages/nsc993/n13759194.md) 
-#### [“流浪”的罹难知青纪念碑 逃港幸存者忆当年](../../pages/nsc993/n13758168.md) 
-#### [【网海拾贝】我们赶上了一个见证奇迹的时代](../../pages/nsc993/n13757535.md) 
-#### [警察将兼任学校副校长，网友：“全面进入警察社会”](../../pages/nsc993/n13756603.md) 
 
 ---
 #### 第 [ [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) ] 页
