--- a/indexes/nsc1025/200.md
+++ b/indexes/nsc1025/200.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：郑州镇压储户维权 暗藏中共高层内斗？](../../pages/nsc1025/n13778869.md) 
+#### [夏林：历史会永远记住安倍晋三](../../pages/nsc1025/n13779359.md) 
 #### [周晓辉：储户吁李克强查河南 央行银保监会早表态](../../pages/nsc1025/n13778633.md) 
 #### [【名家专栏】左右美国房市的两种力量](../../pages/nsc1025/n13778494.md) 
 #### [田云：郑州维权遭镇压 民众问：这还是中国吗？](../../pages/nsc1025/n13778125.md) 
@@ -28,8 +30,6 @@
 #### [任重：中共为什么采集男性DNA？](../../pages/nsc1025/n13776284.md) 
 #### [谢田：美国最高法院正本清源 任重道远](../../pages/nsc1025/n13776211.md) 
 #### [钟原：李克强召开经济座谈会道出实情](../../pages/nsc1025/n13775955.md) 
-#### [王友群：河北公安厅长“猝死”三大疑点及分析](../../pages/nsc1025/n13775939.md) 
-#### [【名家专栏】最新研究揭示中共的侵略性](../../pages/nsc1025/n13775709.md) 
 
 ---
 #### 第 [ [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) ] 页
