--- a/indexes/nsc993/83.md
+++ b/indexes/nsc993/83.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [袁斌：有感于肖建华与王丹的命运异同](../../pages/nsc993/n13779021.md) 
+#### [【网海拾贝】你今天的泪水，都是你曾经的鼓掌换来的](../../pages/nsc993/n13779005.md) 
 #### [浩然：一位瑞典政治家对中共的剖析](../../pages/nsc993/n13778120.md) 
 #### [东方乐：七月的思考：共产主义玩啥哪？](../../pages/nsc993/n13778229.md) 
 #### [沈旭晖：悼念香港人的国际关系启蒙老师、《追龙》预言家倪匡](../../pages/nsc993/n13778215.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】小流氓横行，是因为大流氓当道](../../pages/nsc993/n13762217.md) 
 #### [张菁：一日两起残害女性案 官媒一放一收为哪般？](../../pages/nsc993/n13761611.md) 
 #### [【网海拾贝】中共是最大黑社会](../../pages/nsc993/n13760791.md) 
-#### [【网海拾贝】谁是唐山打人案惯犯累犯背后的保护伞？](../../pages/nsc993/n13759258.md) 
-#### [张肯之：浅谈八九六四与李佳琦事件](../../pages/nsc993/n13759194.md) 
 
 ---
 #### 第 [ [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) ] 页
