have a nice day!

--- a/indexes/nsc1025/201.md
+++ b/indexes/nsc1025/201.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [未普：大陆人的民族主义 他们还有救吗？](../../pages/nsc1025/n13780979.md) 
 #### [【纪元专栏】自由党政府加收金融税 纳税人买单](../../pages/nsc1025/n13768680.md) 
 #### [周晓辉：唐山爆料称女孩都已遇害 残忍超想像](../../pages/nsc1025/n13780968.md) 
 #### [【名家专栏】美最高法院一年内裁决的五大案](../../pages/nsc1025/n13780073.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】所谓觉醒资本主义是左翼谎言](../../pages/nsc1025/n13777457.md) 
 #### [周晓辉：楼阳生掩耳盗铃 为北京如此分忧](../../pages/nsc1025/n13777752.md) 
 #### [颜丹：中共国“小粉红”已将中国人污名化](../../pages/nsc1025/n13777738.md) 
-#### [王友群：孙力军被审判 政治罪盖子待揭](../../pages/nsc1025/n13777444.md) 
 
 ---
-#### 第 [ [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) ] 页
+#### 第 [ [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) ] 页
