have a nice day!

--- a/indexes/nsc1025/201.md
+++ b/indexes/nsc1025/201.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [安倍经济学：救了日本 能不能救美国？](../../pages/nsc1025/n13781342.md) 
+#### [周晓辉：近期七件事凸显中共在国际日益孤立](../../pages/nsc1025/n13781295.md) 
+#### [郝平：上半年财政赤字5万亿 银行断供风险2万亿](../../pages/nsc1025/n13781023.md) 
 #### [未普：大陆人的民族主义 他们还有救吗？](../../pages/nsc1025/n13780979.md) 
 #### [【纪元专栏】自由党政府加收金融税 纳税人买单](../../pages/nsc1025/n13768680.md) 
 #### [周晓辉：唐山爆料称女孩都已遇害 残忍超想像](../../pages/nsc1025/n13780968.md) 
@@ -27,9 +30,6 @@
 #### [逍遥子：从对安倍遇刺事件的反应看中共国与世界的距离](../../pages/nsc1025/n13778149.md) 
 #### [杨威：中国急需安倍这样的领导人](../../pages/nsc1025/n13778099.md) 
 #### [郝平：受制二十大 中共当局对美政策进退失据](../../pages/nsc1025/n13777900.md) 
-#### [【名家专栏】所谓觉醒资本主义是左翼谎言](../../pages/nsc1025/n13777457.md) 
-#### [周晓辉：楼阳生掩耳盗铃 为北京如此分忧](../../pages/nsc1025/n13777752.md) 
-#### [颜丹：中共国“小粉红”已将中国人污名化](../../pages/nsc1025/n13777738.md) 
 
 ---
 #### 第 [ [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) ] 页
