--- a/indexes/nsc993/83.md
+++ b/indexes/nsc993/83.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [何良懋：“伪民族主义”是“人渣主义”](../../pages/nsc993/n13781090.md) 
 #### [【网海拾贝】中共治下滔天罪恶总归杳无声息？](../../pages/nsc993/n13780659.md) 
 #### [胡蓝：就安倍前首相遇刺的辩论](../../pages/nsc993/n13780551.md) 
 #### [广宇：疫情时代世界工业国贸易逆差之迷思](../../pages/nsc993/n13779814.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】八旬妇生日吃不上面 “中国奇迹”令人震惊](../../pages/nsc993/n13767479.md) 
 #### [丹东封控近两月 当地人：太惨了，纯粹人祸](../../pages/nsc993/n13766621.md) 
 #### [【网海拾贝】这不是一个红码，这是一座监狱](../../pages/nsc993/n13766606.md) 
-#### [一个作家在上海封城中的思考](../../pages/nsc993/n13766570.md) 
 
 ---
 #### 第 [ [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) ] 页
