have a nice day!

--- a/indexes/nsc1025/201.md
+++ b/indexes/nsc1025/201.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [杨威：党媒报导习考察新疆印证西方制裁真相](../../pages/nsc1025/n13782105.md) 
+#### [杨宁：习近平新疆考察照片透出蹊跷事](../../pages/nsc1025/n13782102.md) 
+#### [颜丹：病毒活不过一天 中国人已成代价](../../pages/nsc1025/n13782024.md) 
+#### [郝平：经济增长趋零 李克强到站承压](../../pages/nsc1025/n13781865.md) 
+#### [袁斌：唐山事件受害女孩究竟是死是活？](../../pages/nsc1025/n13782025.md) 
+#### [【名家专栏】美国通货膨胀可能会暂时减缓](../../pages/nsc1025/n13781618.md) 
 #### [安倍经济学：救了日本 能不能救美国？](../../pages/nsc1025/n13781342.md) 
 #### [周晓辉：近期七件事凸显中共在国际日益孤立](../../pages/nsc1025/n13781295.md) 
 #### [郝平：上半年财政赤字5万亿 银行断供风险2万亿](../../pages/nsc1025/n13781023.md) 
@@ -24,12 +30,6 @@
 #### [【名家专栏】“牛鞭效应”将令美联储陷困境](../../pages/nsc1025/n13779220.md) 
 #### [王赫：郑州镇压储户维权 暗藏中共高层内斗？](../../pages/nsc1025/n13778869.md) 
 #### [夏林：历史会永远记住安倍晋三](../../pages/nsc1025/n13779359.md) 
-#### [周晓辉：储户吁李克强查河南 央行银保监会早表态](../../pages/nsc1025/n13778633.md) 
-#### [【名家专栏】左右美国房市的两种力量](../../pages/nsc1025/n13778494.md) 
-#### [田云：郑州维权遭镇压 民众问：这还是中国吗？](../../pages/nsc1025/n13778125.md) 
-#### [逍遥子：从对安倍遇刺事件的反应看中共国与世界的距离](../../pages/nsc1025/n13778149.md) 
-#### [杨威：中国急需安倍这样的领导人](../../pages/nsc1025/n13778099.md) 
-#### [郝平：受制二十大 中共当局对美政策进退失据](../../pages/nsc1025/n13777900.md) 
 
 ---
 #### 第 [ [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) ] 页
