--- a/indexes/nsc993/83.md
+++ b/indexes/nsc993/83.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“记变天帐”，是震慑中共恶人的好办法](../../pages/nsc993/n13782737.md) 
 #### [唐付民：安倍遇刺为何搅动中国民众的纷乱情怀？](../../pages/nsc993/n13782127.md) 
 #### [【网海拾贝】我们是生活在地狱吗？](../../pages/nsc993/n13782053.md) 
 #### [何良懋：“伪民族主义”是“人渣主义”](../../pages/nsc993/n13781090.md) 
@@ -29,7 +30,6 @@
 #### [理悟：这是幸福满满的共产社会吗](../../pages/nsc993/n13770623.md) 
 #### [【网海拾贝】如今谁上谁下都救不了中共](../../pages/nsc993/n13769122.md) 
 #### [金浴凤：有一种红色之症叫党瘟](../../pages/nsc993/n13768183.md) 
-#### [【网海拾贝】八旬妇生日吃不上面 “中国奇迹”令人震惊](../../pages/nsc993/n13767479.md) 
 
 ---
 #### 第 [ [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) ] 页
