have a nice day!

--- a/indexes/nsc1025/202.md
+++ b/indexes/nsc1025/202.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：唐山警察嚣张吐实情 中央有保护伞](../../pages/nsc1025/n13785497.md) 
+#### [张菁：看微信同时 中共在用大数据监控思想](../../pages/nsc1025/n13785396.md) 
 #### [【720评论】23年：见证迫害失败 见证信仰永恒](../../pages/nsc1025/n13785353.md) 
 #### [【名家专栏】美国须改善拉美外交政策对抗中共](../../pages/nsc1025/n13784514.md) 
 #### [【名家专栏】随着经济衰退 中共军国主义抬头](../../pages/nsc1025/n13784513.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】美国通货膨胀可能会暂时减缓](../../pages/nsc1025/n13781618.md) 
 #### [安倍经济学：救了日本 能不能救美国？](../../pages/nsc1025/n13781342.md) 
 #### [周晓辉：近期七件事凸显中共在国际日益孤立](../../pages/nsc1025/n13781295.md) 
-#### [郝平：上半年财政赤字5万亿 银行断供风险2万亿](../../pages/nsc1025/n13781023.md) 
-#### [未普：大陆人的民族主义 他们还有救吗？](../../pages/nsc1025/n13780979.md) 
 
 ---
-#### 第 [ [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) ] 页
+#### 第 [ [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) ] 页
