--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之八十二：文革中被挖坟辱尸的历史人物](../../pages/nsc1028/n13785139.md) 
 #### [王友群：上海“政法不倒翁”陈旭倒台之回顾](../../pages/nsc1028/n13778787.md) 
 #### [惠虎宇：中共走入“内乱2.0” 灭亡将至](../../pages/nsc1028/n13778194.md) 
 #### [谭笑飞：秦桧、西门庆和中共党员](../../pages/nsc1028/n13778191.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】小心房地产泡沫破裂](../../pages/nsc1028/n13736895.md) 
 #### [林辉：鲁迅与一日人关系引猜疑 曾为日军辩护](../../pages/nsc1028/n13736182.md) 
 #### [林辉：不愿许广平工作 鲁迅协助救中共党员](../../pages/nsc1028/n13732075.md) 
-#### [王友群：“中华人民共和国”就是一个谎言](../../pages/nsc1028/n13729052.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
