have a nice day!

--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [北京变相禁止酒店办婚宴 网民：“防疫防魔怔了”](../../pages/nsc993/n13785973.md) 
 #### [反迫害23周年 法轮功学员给警察的一封信](../../pages/nsc993/n13785419.md) 
 #### [【网海拾贝】只要核酸检测存在暴利，人为疫情就会轮番上演](../../pages/nsc993/n13785150.md) 
 #### [【网海拾贝】央视跟人民日报打擂台？](../../pages/nsc993/n13784361.md) 
@@ -29,7 +30,6 @@
 #### [北京变相强制接种新冠疫苗，网络炸锅](../../pages/nsc993/n13776238.md) 
 #### [说什么“社会调剂”，明摆着就是变相拐卖人口](../../pages/nsc993/n13774755.md) 
 #### [【网海拾贝】习近平成密接，中南海要不要封锁？](../../pages/nsc993/n13774711.md) 
-#### [王语馨：“我就是为您好” 慈悲善行感化男士退队  ](../../pages/nsc993/n13773846.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
