have a nice day!

--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】一位台商的觉醒](../../pages/nsc993/n13788445.md) 
+#### [国产疫苗受害者：我的女儿就是打疫苗打死的](../../pages/nsc993/n13788390.md) 
 #### [李春草：党的字典里没有“羞耻”二字](../../pages/nsc993/n13787659.md) 
 #### [何良懋：钳制舆论的政权 离灭亡已不远](../../pages/nsc993/n13786910.md) 
 #### [【网海拾贝】这党怎么能不把人民吃干榨尽呢？！](../../pages/nsc993/n13785978.md) 
@@ -28,8 +30,6 @@
 #### [浩然：一位瑞典政治家对中共的剖析](../../pages/nsc993/n13778120.md) 
 #### [东方乐：七月的思考：共产主义玩啥哪？](../../pages/nsc993/n13778229.md) 
 #### [沈旭晖：悼念香港人的国际关系启蒙老师、《追龙》预言家倪匡](../../pages/nsc993/n13778215.md) 
-#### [【网海拾贝】二十大后，将迎来“常态化清零时代”？](../../pages/nsc993/n13777599.md) 
-#### [【网海拾贝】中国人口14亿？实际可能只有10亿](../../pages/nsc993/n13776256.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
