have a nice day!

--- a/indexes/nsc1025/203.md
+++ b/indexes/nsc1025/203.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：2021年火化数超死亡数几百万 细思极恐](../../pages/nsc1025/n13789531.md) 
+#### [颜丹：中共造谣黑美国 还有几人能信](../../pages/nsc1025/n13789515.md) 
+#### [岳山：首名二十大代表死亡 或涉不寻常内情](../../pages/nsc1025/n13789290.md) 
+#### [王赫：佩洛西访台的政治效应](../../pages/nsc1025/n13789135.md) 
+#### [周晓辉：专家急掩疫苗真相 北京恐引火烧身](../../pages/nsc1025/n13788876.md) 
+#### [【名家专栏】结束中共对法轮功学员的群体灭绝](../../pages/nsc1025/n13788768.md) 
 #### [乾元：南京供奉战犯牌位一事日本读者的看法](../../pages/nsc1025/n13788432.md) 
 #### [广宇：中国高校招生制度的弊端](../../pages/nsc1025/n13788579.md) 
 #### [陆客：东郭先生，不要再上狼的当](../../pages/nsc1025/n13788467.md) 
@@ -24,12 +30,6 @@
 #### [王友群： 中共610办公室由盛到衰的五点启示](../../pages/nsc1025/n13786393.md) 
 #### [【纪元专栏】多伦多约克堡再次受攻击](../../pages/nsc1025/n13786494.md) 
 #### [【名家专栏】通胀率会击垮加州经济吗？](../../pages/nsc1025/n13785455.md) 
-#### [【名家专栏】美国应重视中共迫害法轮功的问题](../../pages/nsc1025/n13785713.md) 
-#### [【有冇搞错】白左正在凿沉西方大船](../../pages/nsc1025/n13785967.md) 
-#### [岳山：二十大定案提前泄露 习连任10月出炉？](../../pages/nsc1025/n13785976.md) 
-#### [袁斌：如果佩洛西真要访台，会被中共的威胁吓住吗？](../../pages/nsc1025/n13785943.md) 
-#### [谢田：中国的停贷断供 韭菜缠死镰刀？](../../pages/nsc1025/n13785909.md) 
-#### [王赫：美建芯片联盟对抗中共 韩国何去何从](../../pages/nsc1025/n13785863.md) 
 
 ---
 #### 第 [ [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) / [196](./196.md) ] 页
