--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之八十三：被冤杀的林野夫妇](../../pages/nsc1028/n13789020.md) 
 #### [王友群：毛泽东的笔杆子张春桥被判死缓之回顾](../../pages/nsc1028/n13787500.md) 
 #### [林辉：误信周恩来 南开大学创始人郁郁而终](../../pages/nsc1028/n13786021.md) 
 #### [中共罪行录之八十二：文革中被挖坟辱尸的历史人物](../../pages/nsc1028/n13785139.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】佛州立法要学生了解共产主义邪恶](../../pages/nsc1028/n13739214.md) 
 #### [林辉：否定传统文化 鲁迅为共产革命辩护](../../pages/nsc1028/n13738481.md) 
 #### [惠虎宇：500年风云变幻 俄罗斯帝国荣光不再](../../pages/nsc1028/n13738652.md) 
-#### [【名家专栏】小心房地产泡沫破裂](../../pages/nsc1028/n13736895.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
