--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】会不会到某一天，连呼吸也要批准？](../../pages/nsc993/n13789120.md) 
 #### [【网海拾贝】一位台商的觉醒](../../pages/nsc993/n13788445.md) 
 #### [国产疫苗受害者：我的女儿就是打疫苗打死的](../../pages/nsc993/n13788390.md) 
 #### [李春草：党的字典里没有“羞耻”二字](../../pages/nsc993/n13787659.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】你今天的泪水，都是你曾经的鼓掌换来的](../../pages/nsc993/n13779005.md) 
 #### [浩然：一位瑞典政治家对中共的剖析](../../pages/nsc993/n13778120.md) 
 #### [东方乐：七月的思考：共产主义玩啥哪？](../../pages/nsc993/n13778229.md) 
-#### [沈旭晖：悼念香港人的国际关系启蒙老师、《追龙》预言家倪匡](../../pages/nsc993/n13778215.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
