--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [官方吹嘘中国安全感升至98.62%，评论区翻车](../../pages/nsc993/n13790750.md) 
+#### [【网海拾贝】从中共法西斯手中保卫生活](../../pages/nsc993/n13790641.md) 
 #### [大陆男喜岁月静好 义工：炎黄子孙就应该三退](../../pages/nsc993/n13789824.md) 
 #### [李承鹏：理想爆雷时 请记住湖边一件美好的事](../../pages/nsc993/n13789582.md) 
 #### [【网海拾贝】会不会到某一天，连呼吸也要批准？](../../pages/nsc993/n13789120.md) 
@@ -28,8 +30,6 @@
 #### [赵航：中国人启示录](../../pages/nsc993/n13779765.md) 
 #### [韩笑：唐山女士深感中共太腐败 退团以示远离邪恶](../../pages/nsc993/n13779750.md) 
 #### [上千疫苗受害孩子父母致信胡锡进：你在吃人血馒头](../../pages/nsc993/n13779052.md) 
-#### [袁斌：有感于肖建华与王丹的命运异同](../../pages/nsc993/n13779021.md) 
-#### [【网海拾贝】你今天的泪水，都是你曾经的鼓掌换来的](../../pages/nsc993/n13779005.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
