have a nice day!

--- a/indexes/nsc1025/204.md
+++ b/indexes/nsc1025/204.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [未普：沉默的大多数开始小规模抵抗](../../pages/nsc1025/n13791538.md) 
+#### [谢田：中国“摩擦性失业”的伪命题和烟幕](../../pages/nsc1025/n13791273.md) 
+#### [德慧：“劳而无获”还是“老无所获”？](../../pages/nsc1025/n13791440.md) 
+#### [清泉：庆祝四亿中华儿女退出中共 选择光明的未来](../../pages/nsc1025/n13791433.md) 
+#### [古啸：悲惨绝伦 中共摧残女性叙事](../../pages/nsc1025/n13791297.md) 
+#### [文静：中共别有用心的防疫](../../pages/nsc1025/n13791378.md) 
+#### [项云：大陆乱局乱象是中共故意制造和放纵的邪术](../../pages/nsc1025/n13791370.md) 
+#### [郝平：政治局会议──习李模式坐上末班车？](../../pages/nsc1025/n13791322.md) 
+#### [杨威：拜习通话 极度缺乏共识成为新常态](../../pages/nsc1025/n13791147.md) 
+#### [周晓辉：习近平重磅讲话透三大隐忧](../../pages/nsc1025/n13791149.md) 
+#### [【名家专栏】牵一发而动全身的南太平洋之争](../../pages/nsc1025/n13790980.md) 
 #### [【名家专栏】孔子学院依然在渗透美国大学](../../pages/nsc1025/n13790981.md) 
 #### [夏林：在加拿大罗渣士断网之后 思考逃生路](../../pages/nsc1025/n13791124.md) 
 #### [【纪元专栏】疫情恐慌 让加拿大大学失去理智](../../pages/nsc1025/n13791035.md) 
@@ -19,17 +30,6 @@
 #### [杨威：白宫为拜习通话准备了几张牌？](../../pages/nsc1025/n13789715.md) 
 #### [王友群：二十大前中南海内斗三件大事](../../pages/nsc1025/n13789729.md) 
 #### [【名家专栏】推翻罗诉韦德案对全球的影响](../../pages/nsc1025/n13789406.md) 
-#### [秦容：吴啊萍事件中共四宗罪](../../pages/nsc1025/n13789581.md) 
-#### [周晓辉：2021年火化数超死亡数几百万 细思极恐](../../pages/nsc1025/n13789531.md) 
-#### [颜丹：中共造谣黑美国 还有几人能信](../../pages/nsc1025/n13789515.md) 
-#### [岳山：首名二十大代表死亡 或涉不寻常内情](../../pages/nsc1025/n13789290.md) 
-#### [王赫：佩洛西访台的政治效应](../../pages/nsc1025/n13789135.md) 
-#### [周晓辉：专家急掩疫苗真相 北京恐引火烧身](../../pages/nsc1025/n13788876.md) 
-#### [【名家专栏】结束中共对法轮功学员的群体灭绝](../../pages/nsc1025/n13788768.md) 
-#### [乾元：南京供奉战犯牌位一事日本读者的看法](../../pages/nsc1025/n13788432.md) 
-#### [广宇：中国高校招生制度的弊端](../../pages/nsc1025/n13788579.md) 
-#### [陆客：东郭先生，不要再上狼的当](../../pages/nsc1025/n13788467.md) 
-#### [王友群：习当局为何再提“铁帽子王”？](../../pages/nsc1025/n13788244.md) 
 
 ---
 #### 第 [ [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) / [197](./197.md) ] 页
