--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [河南维权储户：“我对这个国家的信念整个崩塌了”](../../pages/nsc993/n13791473.md) 
 #### [官方吹嘘中国安全感升至98.62%，评论区翻车](../../pages/nsc993/n13790750.md) 
 #### [【网海拾贝】从中共法西斯手中保卫生活](../../pages/nsc993/n13790641.md) 
 #### [大陆男喜岁月静好 义工：炎黄子孙就应该三退](../../pages/nsc993/n13789824.md) 
@@ -29,7 +30,6 @@
 #### [广宇：疫情时代世界工业国贸易逆差之迷思](../../pages/nsc993/n13779814.md) 
 #### [赵航：中国人启示录](../../pages/nsc993/n13779765.md) 
 #### [韩笑：唐山女士深感中共太腐败 退团以示远离邪恶](../../pages/nsc993/n13779750.md) 
-#### [上千疫苗受害孩子父母致信胡锡进：你在吃人血馒头](../../pages/nsc993/n13779052.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
