--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：毛泽东第四任妻子江青自杀之谜](../../pages/nsc1028/n13791949.md) 
+#### [袁斌：我们从小到大学到的历史哪些是假的（18）](../../pages/nsc1028/n13792132.md) 
 #### [古啸：悲惨绝伦 中共摧残女性叙事](../../pages/nsc1028/n13791297.md) 
 #### [中共罪行录之八十三：被冤杀的林野夫妇](../../pages/nsc1028/n13789020.md) 
 #### [王友群：毛泽东的笔杆子张春桥被判死缓之回顾](../../pages/nsc1028/n13787500.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之七十七：饥饿的北京](../../pages/nsc1028/n13742533.md) 
 #### [【名家专栏】马斯克与中共在太空的较量](../../pages/nsc1028/n13741595.md) 
 #### [王友群：江泽民亲信黄菊给上海留下巨大祸患](../../pages/nsc1028/n13738097.md) 
-#### [【名家专栏】佛州立法要学生了解共产主义邪恶](../../pages/nsc1028/n13739214.md) 
-#### [林辉：否定传统文化 鲁迅为共产革命辩护](../../pages/nsc1028/n13738481.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
