--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,10 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】习近平对美发难被怀疑国内出了问题](../../pages/nsc993/n13792623.md) 
+#### [觅真：别错过立功赎罪悔过自新的机会](../../pages/nsc993/n13792611.md) 
+#### [当局为何拒绝公开3-17岁接种新冠疫苗批件？](../../pages/nsc993/n13792608.md) 
+#### [云鹤天：藏头诗—解析中共的华丽辞藻（八首）](../../pages/nsc993/n13792599.md) 
+#### [刘宽：听真言扫除脑中残霾 大陆男率全家“三退”](../../pages/nsc993/n13792592.md) 
 #### [纽约国会议员候选人熊焱写给拜登总统和佩洛西议长的信](../../pages/nsc993/n13792165.md) 
 #### [【网海拾贝】中国经济的庞氏骗局破灭了](../../pages/nsc993/n13792098.md) 
 #### [河南维权储户：“我对这个国家的信念整个崩塌了”](../../pages/nsc993/n13791473.md) 
@@ -25,11 +30,6 @@
 #### [唐山事件，比打人更可怕的是真相至今不明！](../../pages/nsc993/n13783297.md) 
 #### [【网海拾贝】“记变天帐”，是震慑中共恶人的好办法](../../pages/nsc993/n13782737.md) 
 #### [唐付民：安倍遇刺为何搅动中国民众的纷乱情怀？](../../pages/nsc993/n13782127.md) 
-#### [【网海拾贝】我们是生活在地狱吗？](../../pages/nsc993/n13782053.md) 
-#### [何良懋：“伪民族主义”是“人渣主义”](../../pages/nsc993/n13781090.md) 
-#### [【网海拾贝】中共治下滔天罪恶总归杳无声息？](../../pages/nsc993/n13780659.md) 
-#### [胡蓝：就安倍前首相遇刺的辩论](../../pages/nsc993/n13780551.md) 
-#### [广宇：疫情时代世界工业国贸易逆差之迷思](../../pages/nsc993/n13779814.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
