--- a/indexes/nsc993/84.md
+++ b/indexes/nsc993/84.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [疫情防控要算“政治帐”？网友：“就是要面子”](../../pages/nsc993/n13793078.md) 
+#### [唐付民：一个中国，只应建筑在否定“共产专制”之下！](../../pages/nsc993/n13793104.md) 
 #### [【网海拾贝】习近平对美发难被怀疑国内出了问题](../../pages/nsc993/n13792623.md) 
 #### [觅真：别错过立功赎罪悔过自新的机会](../../pages/nsc993/n13792611.md) 
 #### [当局为何拒绝公开3-17岁接种新冠疫苗批件？](../../pages/nsc993/n13792608.md) 
@@ -28,8 +30,6 @@
 #### [广宇：中国高考制度的弊端](../../pages/nsc993/n13783352.md) 
 #### [【网海拾贝】后安倍的台海：中共更危重，台湾更安全](../../pages/nsc993/n13783340.md) 
 #### [唐山事件，比打人更可怕的是真相至今不明！](../../pages/nsc993/n13783297.md) 
-#### [【网海拾贝】“记变天帐”，是震慑中共恶人的好办法](../../pages/nsc993/n13782737.md) 
-#### [唐付民：安倍遇刺为何搅动中国民众的纷乱情怀？](../../pages/nsc993/n13782127.md) 
 
 ---
 #### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
